// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextField Disabled TextField 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #a2bdfb;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 50%;
  cursor: not-allowed;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffffff;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem transparent;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
  padding-right: 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #212332;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6+label {
  font-size: 0.9375rem;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1451dc;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 0.875rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          onClick={[Function]}
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <input
                  aria-invalid={false}
                  className="emotion-6"
                  data-testid="input"
                  disabled={true}
                  id="textfield"
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="emotion-7"
                  htmlFor="textfield"
                >
                  Label
                   
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField MultiTextField 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #a2bdfb;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: unset;
  min-width: 8.75rem;
  background-color: #ffffff;
  min-height: 3.25rem!important;
}

.emotion-2:hover {
  background-color: #e7eefe;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #e7eefe;
}

.emotion-2 input:focus label {
  font-weight: 700;
  -webkit-transform: translate(0.1875rem, -82%) scale(0.8)!important;
  -moz-transform: translate(0.1875rem, -82%) scale(0.8)!important;
  -ms-transform: translate(0.1875rem, -82%) scale(0.8)!important;
  transform: translate(0.1875rem, -82%) scale(0.8)!important;
  bottom: auto;
}

.emotion-2 label {
  -webkit-transform: translate(0.1875rem, -8px);
  -moz-transform: translate(0.1875rem, -8px);
  -ms-transform: translate(0.1875rem, -8px);
  transform: translate(0.1875rem, -8px);
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: 100%;
  padding: 1.3125rem 2.5rem 0.3125rem 1rem;
  min-width: 15rem;
}

.emotion-3>div {
  position: relative;
}

.emotion-4 {
  position: static;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  row-gap: 0.25rem;
  z-index: 2;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #212332;
  display: block;
  position: relative;
  top: unset;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 20%;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
}

.emotion-5+label {
  font-size: 0.9375rem;
}

.emotion-5::-webkit-input-placeholder {
  color: transparent;
}

.emotion-5::-moz-placeholder {
  color: transparent;
}

.emotion-5:-ms-input-placeholder {
  color: transparent;
}

.emotion-5::placeholder {
  color: transparent;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5:focus::-webkit-input-placeholder {
  color: #54587f;
}

.emotion-5:focus::-moz-placeholder {
  color: #54587f;
}

.emotion-5:focus:-ms-input-placeholder {
  color: #54587f;
}

.emotion-5:focus::placeholder {
  color: #54587f;
}

.emotion-5:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-5:focus-within+label,
.emotion-5:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-5:focus-within+label {
  color: #1451dc;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-5:focus+label,
.emotion-5:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -82%) scale(0.8);
  -moz-transform: translate(0.1875rem, -82%) scale(0.8);
  -ms-transform: translate(0.1875rem, -82%) scale(0.8);
  transform: translate(0.1875rem, -82%) scale(0.8);
}

.emotion-6 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 0.875rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-7 {
  position: absolute!important;
  bottom: 0;
  right: 1rem;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "width": "500px",
        }
      }
    >
      <div
        onClick={[Function]}
      >
        <div>
          <div
            className="emotion-2"
            data-testid="showcase"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <input
                  aria-invalid={false}
                  className="emotion-5"
                  data-testid="input_showcase"
                  disabled={false}
                  id="multiTextfield"
                  isMulti={true}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  onMultiValueClearAll={[Function]}
                  onMultiValueDelete={[Function]}
                  placeholder="Type and then press Enter"
                  required={false}
                  tags={Array []}
                  value=""
                />
                <label
                  className="emotion-6"
                  htmlFor="multiTextfield"
                >
                  MultiTextField
                   
                </label>
              </div>
              <div
                className="emotion-7"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Playground 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #a2bdfb;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffffff;
}

.emotion-3:hover {
  background-color: #e7eefe;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #e7eefe;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #212332;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6+label {
  font-size: 0.9375rem;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1451dc;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 0.875rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-8 {
  min-width: 2.75rem;
  max-width: 2.75rem;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: unset;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #5f6c85;
  width: 1rem;
  height: 1rem;
}

.emotion-10 path {
  fill: #5f6c85;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  color: #54587f;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-11 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          onClick={[Function]}
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <input
                  aria-describedby="textfield__00_hintMessage"
                  aria-invalid={false}
                  className="emotion-6"
                  data-testid="input"
                  disabled={false}
                  id="textfield"
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="emotion-7"
                  htmlFor="textfield"
                >
                  Label
                   
                </label>
              </div>
              <div
                aria-hidden={false}
                className="emotion-8"
              >
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-10"
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            className="emotion-11"
            data-testid="error"
          >
            <span
              id="textfield__00_hintMessage"
            >
              Message in Text Field
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with Icons 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #a2bdfb;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffffff;
}

.emotion-3:hover {
  background-color: #e7eefe;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #e7eefe;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #212332;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6+label {
  font-size: 0.9375rem;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1451dc;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 0.875rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-8 {
  min-width: 2.75rem;
  max-width: 2.75rem;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: unset;
}

.emotion-15 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-16 {
  fill: #5f6c85;
  width: 1rem;
  height: 1rem;
}

.emotion-16 path {
  fill: #5f6c85;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          onClick={[Function]}
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <input
                  aria-invalid={false}
                  className="emotion-6"
                  data-testid="input"
                  disabled={false}
                  id="textfield"
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="emotion-7"
                  htmlFor="textfield"
                >
                  Label
                   
                </label>
              </div>
              <div
                aria-hidden={false}
                className="emotion-8"
              >
                <img
                  height="16"
                  src="https://brandmark.io/logo-rank/random/pepsi.png"
                  style={
                    Object {
                      "background": "red",
                    }
                  }
                  width="16"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          onClick={[Function]}
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <input
                  aria-invalid={false}
                  className="emotion-6"
                  data-testid="input"
                  disabled={false}
                  id="textfield"
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="emotion-7"
                  htmlFor="textfield"
                >
                  Label
                   
                </label>
              </div>
              <div
                aria-hidden={false}
                className="emotion-8"
              >
                <span
                  className="emotion-15"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-16"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with Label and Placeholder 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #a2bdfb;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffffff;
}

.emotion-3:hover {
  background-color: #e7eefe;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #e7eefe;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
  padding-right: 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #212332;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6+label {
  font-size: 0.9375rem;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1451dc;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 0.875rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-11 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #212332;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-11+label {
  font-size: 0.9375rem;
}

.emotion-11::-webkit-input-placeholder {
  color: transparent;
}

.emotion-11::-moz-placeholder {
  color: transparent;
}

.emotion-11:-ms-input-placeholder {
  color: transparent;
}

.emotion-11::placeholder {
  color: transparent;
}

.emotion-11:focus {
  outline: none;
}

.emotion-11:focus::-webkit-input-placeholder {
  color: #54587f;
}

.emotion-11:focus::-moz-placeholder {
  color: #54587f;
}

.emotion-11:focus:-ms-input-placeholder {
  color: #54587f;
}

.emotion-11:focus::placeholder {
  color: #54587f;
}

.emotion-11:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-11:focus-within+label,
.emotion-11:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-11:focus-within+label {
  color: #1451dc;
}

.emotion-11:disabled {
  cursor: not-allowed;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          onClick={[Function]}
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <input
                  aria-invalid={false}
                  className="emotion-6"
                  data-testid="input"
                  disabled={false}
                  id="textfield"
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="emotion-7"
                  htmlFor="textfield"
                >
                  Label
                   
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          onClick={[Function]}
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <input
                  aria-invalid={false}
                  className="emotion-11"
                  data-testid="input"
                  disabled={false}
                  id="textfield"
                  placeholder="Placeholder "
                  required={false}
                />
                <label
                  className="emotion-7"
                  htmlFor="textfield"
                >
                  Label
                   
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with Suffix 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #a2bdfb;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffffff;
}

.emotion-3:hover {
  background-color: #e7eefe;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #e7eefe;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #212332;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6+label {
  font-size: 0.9375rem;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1451dc;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 0.875rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-8 {
  min-width: 2.75rem;
  max-width: 2.75rem;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: unset;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          onClick={[Function]}
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <input
                  aria-invalid={false}
                  className="emotion-6"
                  data-testid="input"
                  disabled={false}
                  id="textfield"
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="emotion-7"
                  htmlFor="textfield"
                >
                  Label
                   
                </label>
              </div>
              <div
                aria-hidden={false}
                className="emotion-8"
              >
                <div
                  style={
                    Object {
                      "color": "gray",
                    }
                  }
                >
                  %
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with different Statuses 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #a2bdfb;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffffff;
}

.emotion-3:hover {
  background-color: #e7eefe;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #e7eefe;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
  padding-right: 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #212332;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6+label {
  font-size: 0.9375rem;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1451dc;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 0.875rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  color: #54587f;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.125rem #ff73a6;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffe7f0;
}

.emotion-9:hover {
  background-color: #ffd0e1;
}

.emotion-9:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #e7eefe;
}

.emotion-13 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 0.875rem;
  font-weight: 400;
  color: #FF176B;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  color: #cc1255;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-14 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

.emotion-15 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-16 {
  fill: #cc1255;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-16 path {
  fill: #cc1255;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #e4e7ff;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: not-allowed;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #e7eefe;
}

.emotion-17:hover {
  background-color: #e7eefe;
}

.emotion-17:focus-within {
  box-shadow: 0 0 0 0.125rem #e4e7ff;
  background-color: #e7eefe;
}

.emotion-18 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
}

.emotion-18>div {
  position: relative;
}

.emotion-22 {
  min-width: 2.75rem;
  max-width: 2.75rem;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: unset;
}

.emotion-24 {
  fill: #5f6c85;
  width: 1rem;
  height: 1rem;
}

.emotion-24 path {
  fill: #5f6c85;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          onClick={[Function]}
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <input
                  aria-describedby="textfield__00_hintMessage"
                  aria-invalid={false}
                  className="emotion-6"
                  data-testid="input"
                  disabled={false}
                  id="textfield"
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="emotion-7"
                  htmlFor="textfield"
                >
                  Label
                   
                </label>
              </div>
            </div>
          </div>
          <div
            className="emotion-8"
            data-testid="error"
          >
            <span
              id="textfield__00_hintMessage"
            >
              Hint in Text Field
            </span>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          onClick={[Function]}
        >
          <div
            className="emotion-9"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <input
                  aria-describedby="textfield__00_hintMessage"
                  aria-invalid={true}
                  className="emotion-6"
                  data-testid="input"
                  disabled={false}
                  id="textfield"
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="emotion-13"
                  htmlFor="textfield"
                >
                  Label
                   
                </label>
              </div>
            </div>
          </div>
          <div
            className="emotion-14"
            data-testid="error"
          >
            <span
              className="emotion-15"
              onClick={[Function]}
            >
              <span
                className="emotion-16"
              />
            </span>
            <span
              id="textfield__00_hintMessage"
            >
              Error in Text Field
            </span>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          onClick={[Function]}
        >
          <div
            className="emotion-17"
          >
            <div
              className="emotion-18"
            >
              <div
                className="emotion-5"
              >
                <input
                  aria-invalid={false}
                  className="emotion-6"
                  data-testid="input"
                  disabled={true}
                  id="textfield"
                  placeholder="Label"
                  readOnly={true}
                  required={false}
                />
                <label
                  className="emotion-7"
                  htmlFor="textfield"
                >
                  Label
                   
                </label>
              </div>
              <div
                aria-hidden={false}
                className="emotion-22"
              >
                <span
                  className="emotion-15"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-24"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
